Made the settings page responsive and fixed the fade in animation flickering

--- a/src/app/components/mentor-cards/mentor-cards.component.scss
+++ b/src/app/components/mentor-cards/mentor-cards.component.scss
@@ -146,19 +146,3 @@
   }
 }
 
-
-  .visible {
-    animation: mentorCardsFadeIn 2s;
-  }
-
-  @keyframes mentorCardsFadeIn {
-    from {
-      opacity: 0;
-      transform: translateY(20px);
-    }
-
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
